pulsar demo added

--- a/pulsar/pulsar.html
+++ b/pulsar/pulsar.html
@@ -23,6 +23,7 @@ path {
 </style>
 
 <body>
+<img src="dsp_bd.jpg"/>
 <script src="http://d3js.org/d3.v3.js"></script>
 <script src="math.min.js"></script>
 <script src="pulsar.js"></script>
