--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<html></html>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>DROM</title>
+  <style type="text/css">
+  html, body {
+    background: #ede7d5ff;
+    height: 100%;
+
+  }
+  .content {
+    height: 100%;
+    vertical-align: middle;
+  }
+  .logo {
+    height: 100%;
+    background-repeat: no-repeat;
+    background-image: url(img/logo.min.svg);
+    background-position: center;
+  }
+</style>
+</head>
+<body>
+    <div class="content"><div class="logo"></div></dev>
+</body>
+</html>
