--- a/fday15/index.html
+++ b/fday15/index.html
@@ -73,7 +73,7 @@
         <li class="next">from micro-controllers to rockets</li>
         <li class="next"><b>"everywhere"</b> is changing over time</li>
         <li class="next">JavaScript is everywhere</li>
-        <li class="next">Can we translate Forth &lt;--&gt; JavaScript</li>
+        <li class="next">Can we translate Forth &lt;--&gt; JavaScript?</li>
     </ul>
 </div></section>
 
@@ -84,10 +84,9 @@
     <ul>
         <li>PC client (browser)</li>
         <li>server, cloud (<a href="https://nodejs.org/en/">node.js</a>)</li>
-        <li>mobile phone, tablet</li>
-        <li>embedded:</li>
+        <li>mobile phone, tablet, Apps</li>
+        <li>Embedded. IoT, etc.</li>
         <ul>
-            <li>TV, iot, embedded</li>
             <li>Dev boards: <a href="https://tessel.io/">tessel.io</a>, <a href="http://www.espruino.com/">espruino.com</a></li>
             <li>Runtimes: <a href="http://kinoma.com/">kinomajs</a>, <a href="http://www.iotjs.net">iot.js</a>, <a href="https://github.com/cesanta/v7">v7</a></li>
         </ul>
@@ -164,14 +163,14 @@
     </ul>
     <p class="note">
         <a href="https://github.com/drom/forth">Repo</a> and
-        <a href="./forth/index.html">Demo</a>
+        <a href="../forth/index.html">Demo</a>
     </p>
 </div></section>
 
 
 
 <section class="slide"><div>
-    <h2>Forth in JS challenges</h2>
+    <h2>Forth in JS -- challenges</h2>
     <ul>
         <li>Double and mixed integer arithmetic. i64, u64</li>
         <li>Forth control structures are complex, JS has no branches</li>
@@ -191,7 +190,7 @@
             <a href="https://github.com/drom/wast-pipeline">wast-pipeline</a>
         </li>
     </ul>
-    <p class="note"><a href="./shift-forth/index.html">Demo</a></p>
+    <p class="note"><a href="../shift-forth/editor.html">Demo</a></p>
 </div></section>
 
 
@@ -209,8 +208,8 @@
     <h2>Conclusions</h2>
     <ul>
         <li>Yes, one can mix JavaScript and Forth</li>
-        <li>Allows doing full web-based Forth IDE</li>
-        <li>For me -- stepping stone to do my Stack Processor reserach (<a href="https://github.com/drom/quark">Quark</a>).</li>
+        <li>Allows full web-based Forth IDE</li>
+        <li>A stepping stone in my Stack Processor reserach (<a href="https://github.com/drom/quark">Quark</a>).</li>
         <li>All free and Open Source</li>
     </ul>
 </div></section>
