--- a/fday15/index.html
+++ b/fday15/index.html
@@ -172,8 +172,10 @@
 <section class="slide"><div>
     <h2>Forth in JS -- challenges</h2>
     <ul>
+        <li>Organize vocabulary with JS structures, array, object.</li>
+        <li>Forth control structures are complex, JS has no branches, has to use break</li>
+        <li>CREATE DOES&gt; magic</li>
         <li>Double and mixed integer arithmetic. i64, u64</li>
-        <li>Forth control structures are complex, JS has no branches</li>
     </ul>
 </div></section>
 
