--- a/cube/index.html
+++ b/cube/index.html
@@ -39,6 +39,7 @@
 </head>
 <body>
 <div class="content" id="content"></div>
+<div class="formula" id="formula"></div>
 <script src="app.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
