--- a/cube/index.html
+++ b/cube/index.html
@@ -10,8 +10,11 @@
     margin: 0;
   }
   .content {
-    height: 100%;
+    height: 75vp;
     margin: 0;
+  }
+  .formula {
+    
   }
   .logo {
     display: block;
