added locl storage

--- a/cosmo/index.html
+++ b/cosmo/index.html
@@ -46,7 +46,7 @@
     <script src="codemirror.js"></script>
     <script src="search.js"></script>
     <script src="searchcursor.js"></script>
-    <script src="javascript.js"></script>
+    <!-- <script src="markdown.js"></script> -->
 </head>
 <body>
     <div id="content">
