--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 <a xlink:href="https://observablehq.com/@drom">
     <path class="letter" d="M249 176l-27 16-14 24v64l14 8 27-16 14-24v-64zm-13 24l13 8v32l-13 24-14-8v-32zm0 0v32l13 8m-41-56l28-16 13 8m-27 80l14-24 13 8m-55-32v64l14 8m0-64l-14-8 14-24 14 8"/>
 </a>
-<path class="letter" d="M291 328v-96l14-8 14 8 14-24 13-8v96l-13 8v-64l-14 24-14-8v64zm28-64v32l14 8m-14-104l14-8 13 8m-55 32l-14-8 14-8 14 8m0 0l14-24 14 8m-56 16v96l14 8"/></svg>
+<a xlink:href="https://twitter.com/wavedrom">
+    <path class="letter" d="M291 328v-96l14-8 14 8 14-24 13-8v96l-13 8v-64l-14 24-14-8v64zm28-64v32l14 8m-14-104l14-8 13 8m-55 32l-14-8 14-8 14 8m0 0l14-24 14 8m-56 16v96l14 8"/></svg>
+</a>
 </dev>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
