updated inspect demo

--- a/inspect/rocket-chip/index.html
+++ b/inspect/rocket-chip/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>swerv</title>
+    <title>rocket-chip</title>
     <link rel="shortcut icon" href="../favicon.ico"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../main.css">
