--- a/inspect/serv/index.html
+++ b/inspect/serv/index.html
@@ -8,7 +8,7 @@
     <script src="../main.js"></script>
   </head>
 
-  <body onload="Hier('container', 'search', 'serv.hier.json')">
+  <body onload="Hier('container', 'search', 'hier.json')">
     <input type="text" id="search" name="search">
     <div id="container" style="position: relative;"></div>
   </body>
