--- a/doppler/swerv_hello_world.html
+++ b/doppler/swerv_hello_world.html
@@ -5,53 +5,10 @@
     <link rel="shortcut icon" href="favicon.ico"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
-    <script src="main.js"></script>
+    <script src="main.min.js"></script>
   </head>
 
-  <body onload="Doppler('waveform1', 'swerv_hello_world.chango.json')">
-    <div id="waveform1" style="height:100%">
-{"view": [
-{"name":"core_clk", "ref":"|s"},
-{"name":"lsu_axi_araddr", "ref":"th"},
-{"name":"lsu_axi_arburst", "ref":"*v"},
-{"name":"lsu_axi_arcache", "ref":"J"},
-{"name":"lsu_axi_arid", "ref":"mh"},
-{"name":"lsu_axi_arlen", "ref":")v"},
-{"name":"lsu_axi_arlock", "ref":"+v"},
-{"name":"lsu_axi_arprot", "ref":",v"},
-{"name":"lsu_axi_arqos", "ref":"-v"},
-{"name":"lsu_axi_arready", "ref":"(v"},
-{"name":"lsu_axi_arregion", "ref":"H"},
-{"name":"lsu_axi_arsize", "ref":"I"},
-{"name":"lsu_axi_arvalid", "ref":"sh"},
-{"name":"lsu_axi_awaddr", "ref":"nh"},
-{"name":"lsu_axi_awburst", "ref":"*v"},
-{"name":"lsu_axi_awcache", "ref":"J"},
-{"name":"lsu_axi_awid", "ref":"mh"},
-{"name":"lsu_axi_awlen", "ref":")v"},
-{"name":"lsu_axi_awlock", "ref":"+v"},
-{"name":"lsu_axi_awprot", "ref":",v"},
-{"name":"lsu_axi_awqos", "ref":"-v"},
-{"name":"lsu_axi_awready", "ref":"(v"},
-{"name":"lsu_axi_awregion", "ref":"H"},
-{"name":"lsu_axi_awsize", "ref":"I"},
-{"name":"lsu_axi_awvalid", "ref":"lh"},
-{"name":"lsu_axi_bid", "ref":"\"f"},
-{"name":"lsu_axi_bready", "ref":"(v"},
-{"name":"lsu_axi_bresp", "ref":".v"},
-{"name":"lsu_axi_bvalid", "ref":"!f"},
-{"name":"lsu_axi_rdata", "ref":"%f"},
-{"name":"lsu_axi_rid", "ref":"$f"},
-{"name":"lsu_axi_rlast", "ref":"(v"},
-{"name":"lsu_axi_rready", "ref":"(v"},
-{"name":"lsu_axi_rresp", "ref":".v"},
-{"name":"lsu_axi_rvalid", "ref":"#f"},
-{"name":"lsu_axi_wdata", "ref":"ph"},
-{"name":"lsu_axi_wlast", "ref":"(v"},
-{"name":"lsu_axi_wready", "ref":"(v"},
-{"name":"lsu_axi_wstrb", "ref":"rh"},
-{"name":"lsu_axi_wvalid", "ref":"oh"}
-]}
-</div>
+  <body onload="DopplerGL('waveform1', 'swerv_hello_world.chango.json', 'swerv.bus.json')">
+    <div id="waveform1" style="height:100%"></div>
   </body>
 </html>
