:arrow_up: wavehub

--- a/wavehub/index.html
+++ b/wavehub/index.html
@@ -1,14 +1,14 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="wavehub.ico"/>
     <title>WaveHub</title>
+    <!-- <script src="vcd.js"></script> -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="codemirror.css">
     <link rel="stylesheet" href="blackboard.css">
     <link rel="stylesheet" href="wavehub.css">
-    <script src="vcd.js"></script>
     <script src="wavehub.js"></script>
-    <link rel="shortcut icon" href="wavehub.ico"/>
   </head>
   <body onload="WaveHub('waveform1')">
     <div id="waveform1"></div>
