--- a/vcd/index.html
+++ b/vcd/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="wavehub.ico"/>
-    <title>WaveHub</title>
+    <title>VCDrom</title>
     <!-- <script src="vcd.js"></script> -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="codemirror.css">
