--- a/vcd/index.html
+++ b/vcd/index.html
@@ -4,7 +4,8 @@
     <link rel="shortcut icon" href="wavehub.ico"/>
     <title>VCDrom</title>
     <!-- <script src="vcd.js"></script> -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet"> -->
+    <link rel="preload" as="font" href="iosevka-term-light.woff2" type="font/woff2" crossorigin>
     <link rel="stylesheet" href="codemirror.css">
     <link rel="stylesheet" href="blackboard.css">
     <link rel="stylesheet" href="wavehub.css">
