--- a/vcd/index.html
+++ b/vcd/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="blackboard.css">
     <link rel="stylesheet" href="vcdrom.css">
     <script src="vcdrom.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-67058225-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-67058225-1');
+</script>
+
   </head>
   <body onload="VCDrom('waveform1')">
     <div id="waveform1">
@@ -15,12 +25,4 @@
       <input type="file" id="inputfile" accept=".vcd" style="display:none">
     </div>
   </body>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-67058225-1', 'auto');
-  ga('send', 'pageview');
-</script>
 </html>
