--- a/vcd/index.html
+++ b/vcd/index.html
@@ -1,11 +1,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="vcdrom.ico"/>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 fill=%22grey%22 font-size=%2290%22>🌊</text></svg>">
     <title>VCDrom</title>
     <link rel="preload" as="font" href="iosevka-term-light.woff2" type="font/woff2" crossorigin>
     <link rel="stylesheet" href="codemirror.css">
-    <link rel="stylesheet" href="blackboard.css">
     <link rel="stylesheet" href="vcdrom.css">
     <script src="vcdrom.js"></script>
   </head>
